--- a/index.html
+++ b/index.html
@@ -1,7 +1,55 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, intal-scale=1.0" />
+    <link href="css/default.css" rel="stylesheet" type="text/css" media="all" />
+    <title>Recep YILDIRIM</title>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+   <div class="container">
+       <div id="menu">
+           <div id="box">
+               <div id="profil">
+                   <img src="img/profil.jpg" />
+               </div>
+               
+           </div>
+           <div id="box">
+               <div id="profilTitle">
+                   <h2>Hi! I'm Recep YILDIRIM</h2>
+                   <p>I have been working as a Unity game developer since 2019, with a strong focus on backend systems and shader optimization</p>
+               </div>
+              
+           </div>
+       </div>
+       <div id="contact">
+           <div id="linkBox">
+               <a href="mailto:recepyildirim638@gmail.com" title="Mail">
+                   <img src="img/mail.jpg" />
+               </a>
+           </div>
+           <div id="linkBox">
+               <a href="https://drive.google.com/file/d/12Kin7-f-bomesDQhszIwlsL7tfBaVQTb/view?usp=sharing" title="CV:pdf">
+                   <img src="img/cv.jpg" />
+               </a>
+           </div>
+           <div id="linkBox">
+               <a href="https://www.linkedin.com/in/recep-yildirim-832685156" title="Linked-in">
+                   <img src="img/linkedin.jpg" />
+               </a>
+           </div>
+           <div id="linkBox">
+               <a href="https://apps.apple.com/us/app/soldier-attack-rescue-hostage/id6478766719" title="Google Market">
+                   <img src="img/googleMarket.jpg" />
+               </a>
+           </div>
+           <div id="linkBox">
+               <a href="https://github.com/recepyildirim638" title="Github">
+                   <img src="img/githup.jpg" />
+               </a>
+           </div>
+       </div>
+   </div>
 </body>
 </html>
